--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Build
         run: npm run build -- --configuration=production --base-href=/se-role-fit/
 
+      - name: Copy index.html to 404.html
+        run: cp dist/demo/index.html dist/demo/404.html
+
       - name: Deploy to GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4
         with:
