--- a/angular.json
+++ b/angular.json
@@ -1,60 +1,46 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "cli": {
-    "analytics": "1e1de97b-a744-405a-8b5a-0397bb3d01ce"
-  },
-  "newProjectRoot": "projects",
+  "version": 1,
   "projects": {
     "demo": {
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-angular:application",
-          "configurations": {
-            "development": {
-              "extractLicenses": false,
-              "namedChunks": true,
-              "optimization": false,
-              "sourceMap": true
-            },
-            "production": {
-              "aot": true,
-              "extractLicenses": true,
-              "namedChunks": false,
-              "optimization": true,
-              "outputHashing": "all",
-              "sourceMap": false
-            }
-          },
-          "options": {
-            "assets": [],
-            "index": "src/index.html",
-            "browser": "src/main.ts",
-            "outputPath": "dist/demo",
-            "polyfills": ["zone.js"],
-            "scripts": [],
-            "styles": ["src/global_styles.css"],
-            "tsConfig": "tsconfig.app.json"
-          }
-        },
-        "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "configurations": {
-            "development": {
-              "buildTarget": "demo:build:development"
-            },
-            "production": {
-              "buildTarget": "demo:build:production"
-            }
-          },
-          "defaultConfiguration": "development"
-        }
-      },
-      "prefix": "app",
       "projectType": "application",
       "root": "",
-      "schematics": {},
-      "sourceRoot": "src"
+      "sourceRoot": "src",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:browser",
+          "options": {
+            "outputPath": "dist/demo",
+            "index": "src/index.html",
+            "main": "src/main.ts",
+            "polyfills": ["zone.js"],
+            "tsConfig": "tsconfig.app.json",
+            "assets": [
+              "src/favicon.ico",
+              "src/assets",
+              {
+                "glob": "404.html",
+                "input": "src",
+                "output": "/"
+              }
+            ],
+            "styles": ["src/global_styles.css"]
+          },
+          "configurations": {
+            "production": {
+              "baseHref": "/se-role-fit/",
+              "outputHashing": "all",
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kb",
+                  "maximumError": "1mb"
+                }
+              ]
+            }
+          }
+        }
+      }
     }
-  },
-  "version": 1
+  }
 }
